--- a/frontend/src/components/Products/Products.css
+++ b/frontend/src/components/Products/Products.css
@@ -58,7 +58,8 @@
   font-size: 1.25rem;
   font-weight: bold;
   margin: 0.75rem 0;
-  text-align: right;
+  text-align: center;
+
 }
 
 .product-image {
